# ghelper-for-linux

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  setup.sh
.github/workflows/: release.yml
src/: app.rs  battery.rs  config.rs  gpu.rs  main.rs  system.rs
